tests/xml/invalidxml/obsTime/badtime8.xml.README
badtime8.xml: BAD obsTime since year is five digits
